# store

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: manage.py  pyproject.toml
backend/apps/clients/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/clients/migrations/: 0001_initial.py
backend/apps/expenses/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/expenses/migrations/: 0001_initial.py  0002_initial.py
backend/apps/inventory/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/inventory/migrations/: 0001_initial.py  0002_initial.py
backend/apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/products/migrations/: 0001_initial.py
backend/apps/quotes/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/quotes/migrations/: 0001_initial.py  0002_initial.py
backend/apps/reports/: urls.py  views.py
backend/apps/sales/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/sales/migrations/: 0001_initial.py  0002_initial.py
backend/apps/users/: admin.py  auth_views.py  config_urls.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/management/commands/: setup_initial_data.py
backend/apps/users/migrations/: 0001_initial.py  0002_authenticationlog.py
backend/store_backend/: asgi.py  config.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/i18n/: index.ts
(+21 files in other folders)
